# ACE15-Realtime

./: .gitignore  README.md
app/: CMakeLists.txt
app/Resources/: app.js  index.html  styles.css
app/Source/: IpcClient.cpp  IpcClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
bench/: ab_align_probe.py  coherence_test.py  drift_inherent.py  enc_lmargin_sweep.py  enc_localize.py  enc_window_validate.py  leak_repro.py  link_grid_test.py  link_socket_test.py  link_warble_diag.py  live_reuse_test.py  live_warble_diag.py  loop_change_test.py  loop_cover_test.py  loop_detect_test.py  loop_lead_sign.py  loop_socket_test.py  loop_sync_probe.py  loop_warmup_test.py  metallic_probe.py  model_switch_repro.py  out_sep_test.py  phase0_gate.py  phase1_sweep.py  probe_batch.py  rolling_probe.py  rt_bar_test.py  rt_encode_test.py  rt_input_test.py  rt_live_socket_test.py  rt_live_test.py  sep_test.py  sidecar_live_probe.py  style_sweep.py  tile_test.py  underrun_test.py  warble_ab.py  warble_anchor.py  warble_file_win.py  xl_quality.py  (+1 more)
cli/: jit_cover.py  make_audition.py  offline_cover.py  realtime_test.py  stream_cover.py
engine/: jit.py  loader.py  metrics.py  mps_compat.py  realtime.py  separation.py  streaming.py  style_metric.py
notes/: phase0_findings.md  phase0_results.md  phase1_findings.md  phase1_results.md  phase2_app.md  prompting.md  realtime_input_mode.md
scripts/: run_app.sh
sidecar/: enhancer.py  link_proc.py  link_sync.py  server.py  test_client.py
